--- a/products.html
+++ b/products.html
@@ -40,7 +40,6 @@
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="index.html">Inicio
-                <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item px-lg-4">
@@ -56,7 +55,7 @@
         </div>
       </div>
     </nav>
-
+    
     <section class="page-section">
       <div class="container">
         <div class="product-item">
@@ -140,17 +139,14 @@
         </div>
       </div>
     </section>
-
+    
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">Copyright &copy; Ricodelicias 2019</p>
       </div>
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
   </body>
-
 </html>
