--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                   <span class="section-heading-upper">Pan delicioso, acompañado con exquisitos cafes</span>
                   <span class="section-heading-lower">Nuestra historia</span>
                 </h2>
-                <p>Fundamos la panaria y cafe Ricodelicias en ("Año") con el objetivo de ..... somos una empresa dedicada a..... bla bla</p>
+                <p>Fundamos la panaria y cafe Ricodelicias en 2009 con el objetivo de revolucionar el concepto de este arte tan maravilloso somos una empresa dedicada a la elaboracion de deliciosos panes, pasteles y postres que siempre pueden ir acompañados por un buen cafe.  </p>
                 <p class="mb-0">Garantizamos que encontraras deliciosas comidas disfruta en familia, con amigos o solo, siempre seras bienvenido!</p>
               </div>
             </div>
