--- a/products.html
+++ b/products.html
@@ -62,7 +62,7 @@
           <div class="product-item-title d-flex">
             <div class="bg-faded p-5 d-flex ml-auto rounded">
               <h2 class="section-heading mb-0">
-                <span class="section-heading-upper">Hecho con los ingredientes mas finos</span>
+                <span class="section-heading-upper">Pan y pasteles</span>
                 <span class="section-heading-lower">Pan Antaño</span>
               </h2>
             </div>
