--- a/products.html
+++ b/products.html
@@ -67,7 +67,7 @@
               </h2>
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+          <img class="mb-3 mb-lg-0 imagen" src="img/products-01.jpg" alt="">
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
               <p class="mb-0">Descripcion</p>
